montly pattern styling

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -459,7 +459,6 @@ nav {
 
 .setting {
   width: 100%;
-
   /* height: 736px;  iphone x 기준*/
   height: 92vh;
   overflow-y: scroll;
@@ -468,10 +467,8 @@ nav {
   letter-spacing: -0.24px;
   background-color: var(--page);
   -ms-overflow-style: none;
-
   /* IE and Edge */
   scrollbar-width: none;
-
   /* Firefox */
   margin-bottom: 16px;
   transition: all .5s;
@@ -482,7 +479,6 @@ nav {
 
   &::-webkit-scrollbar {
     display: none;
-
     /* Chrome, Safari, Opera*/
   }
 
@@ -550,7 +546,7 @@ nav {
       }
     }
   }
-
+  /* 일간 리포트 */
   .daily_report {
     margin-left: 8%;
     font-size: 18px;
@@ -585,7 +581,7 @@ nav {
       width: 100vh;
     }
   }
-
+  /* 월간 지출 패턴 */
   .monthly_out_pattern {
     margin-left: 8%;
     font-size: 18px;
@@ -607,26 +603,26 @@ nav {
       margin: 0 auto;
       position: relative;
       margin-bottom: 16px;
-
       div {
         position: absolute;
-        width: 160px;
-        height: 36px;
+        width: 100%;
+        padding-left: 4px;
+        font-size: 24px;
+        letter-spacing: 2px;
         color: var(--font-base);
-        top: 50%;
-        left: 50%;
-        transform: translate(-45px, -18px);
+        text-align: center;
+        top: 48%;
+
+        span:last-child {
+          font-size: 14px;
+          margin-left: 2px;
+        }
       }
     }
   }
 }
 
-/* 일간 리포트 */
-
-/* 월간 지출 패턴 */
-
 /* 카테고리들 */
-
 .out_category {
   width: 82.666666%;
   margin-left: 1.707805%;
