fix: cause of html tag changed,scss selector change

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -366,7 +366,7 @@ input {
     /* Chrome, Safari, Opera*/
   }
 
-  > ul {
+  > ol {
     width: 80.533333%;
     margin-left: 9.6%;
     margin-right: 9.866666%;
@@ -396,7 +396,7 @@ input {
           }
         }
 
-        ul > li {
+        ol > li {
           font-size: 18px;
           font-weight: 300;
           line-height: 36px;
