feat: add style details >  income orange

--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -419,7 +419,7 @@ input {
               float: right;
             }
 
-            &.income {
+            &.in {
               color: #FF5F00;
             }
           }
